tests/error/tracing_errors/generic_load.err
Error: Error in comptime function return (at $FILE:13:0)
   | 
11 | 
12 | @guppy.comptime
13 | def main() -> Function[[int], int]:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |     return generic_func
   | ^^^^^^^^^^^^^^^^^^^^^^^

Cannot infer type parameters of generic function `generic_func`

Guppy compilation failed due to 1 previous error
